# Calendar-Alikindoi

./: .env.example  .eslintrc  .gitpod.yml  Dockerfile.render  Pipfile  README.md  credentials.json  database.sh  init-db.js  package-lock.json  package.json  pycodestyle.cfg  pyproject.toml  requirements.txt  template.html  test.db  webpack.common.js
.devcontainer/: Dockerfile  devcontainer.json
Project Logs/: Project Inquiry.md
TEST/: todo.js
docs/: HELP.md
docs/assets/: greeting.py
migrations/: env.py
migrations/versions/: 03bbe695629c_.py  2fd201444ebe_.py  35dad1e5e085_.py  4c6ab4a841b4_.py  7350efb7d653_merge_heads.py  739faaf6140c_.py  96a3bf62dfc2_.py  9ce6b6bd4f28_.py  b8a633a49b2e_.py  bf3f8c559b93_.py  c3c2e1c4a547_.py  c90f77c5e44a_.py  ceaeb44f7bd2_.py  cfb007773bd8_ 2.py  d949d4e8c338_.py  ebd76a54d76d_.py
public/: bundle.js  index.html
src/: app.py
src/TEST/: todo.js
src/TEST/js/: todo.js
src/TEST/todoist_api_python/: todoist.py
src/api/: admin.py  commands.py  models.bk.py  models.py  routes.py  services.py
src/api/models/: diagram_generator.py  event.py  event_tag.py  expenses.py  google_calendar_event.py  mood.py  piggybank.py  tag.py  transaction.py  user.py  wallet.py
src/api/routes/: auth_jwt_route.py  auth_routes.py  auth_todoist_route.py  event_route.py  event_tag_route.py  expenses_route.py  google_calendar_auth.py  google_calendar_event_route.py  mood_route.py  piggybank_route.py  tag_route.py  transaction_route.py  user_route.py  (+1 more)
src/instance/: app 2.db  app.db  test.db
src/styles/: _variables.scss  main.scss
(+111 files in other folders)
